--- a/共編.html
+++ b/共編.html
@@ -1,9 +1,57 @@
 <!DOCTYPE html>
-  <html>
-    <head>
+<html lang="zh-TW">
+  <head>
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    </head>
-    <body>
-    </body>
-  </html>
+      <title>蝦皮購物</title>
+      <link rel="stylesheet" href="container.css">
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"><!--https://fontawesome.com/-->
+  </head>
+  <body>
+      <header class="navbar">
+          <div class="top-nav">
+              <div class="left">
+                  <a href="#">賣家中心</a> | 
+                  <a href="#">開始隨拍即賣</a> | 
+                  <a href="#">下載</a> | 
+                  <a href="#">追蹤我們</a>
+                  <i class="fa-brands fa-facebook"></i>
+                  <i class="fa-brands fa-instagram"></i>
+                  <i class="fa-brands fa-line"></i>
+              </div>
+              <div class="right">
+                  <a href="#">通知總覽</a> | 
+                  <a href="#">幫助中心</a> | 
+                  <a href="#">繁體中文 ▼</a> | 
+                  <a href="#">註冊</a> | 
+                  <a href="#">登入</a>
+              </div>
+          </div>
+
+          <div class="main-nav">
+              <div class="logo">蝦皮購物</div>
+              <div class="search-bar">
+                  <input type="text" placeholder="註冊獲得全站優惠券與免運券">
+                  <button><i class=" fa-solid fa-magnifying-glass"></i></button>
+              </div>
+              <div class="cart-icon">
+                  <i class="fa-solid fa-cart-shopping"></i>
+              </div>
+          </div>
+
+          <div class="categories">
+              <a href="#">超便宜手機</a> |
+              <a href="#">Nike官網</a> |
+              <a href="#">學生裝</a> |
+              <a href="#">行充20000mah</a> |
+              <a href="#">假指甲貼片</a> |
+              <a href="#">手飾</a> |
+              <a href="#">解壓球捏捏</a> |
+              <a href="#">拍立得相機</a> |
+              <a href="#">軟骨頭沙發</a> |
+              <a href="#">Jogging Pants Men</a> |
+              <a href="#">流行包包</a>
+          </div>
+      </header>
+  </body>
+</html>
