--- a/共編.html
+++ b/共編.html
@@ -9,7 +9,7 @@
   </head>
   <body>
       <header class="navbar">
-          <div class="top-nav">
+          <div class="top">
               <div class="left">
                   <a href="#">賣家中心</a> | 
                   <a href="#">開始隨拍即賣</a> | 
@@ -28,7 +28,7 @@
               </div>
           </div>
 
-          <div class="main-nav">
+          <div class="main">
               <div class="logo">蝦皮購物</div>
               <div class="search-bar">
                   <input type="text" placeholder="註冊獲得全站優惠券與免運券">
