--- a/共編.html
+++ b/共編.html
@@ -29,7 +29,7 @@
           </div>
 
           <div class="main">
-              <div class="logo">蝦皮購物</div>
+              <div class="logo"><i class="fa-solid fa-bag-shopping"></i> 蝦皮購物</div>
               <div class="search-bar">
                   <input type="text" placeholder="註冊獲得全站優惠券與免運券">
                   <button><i class=" fa-solid fa-magnifying-glass"></i></button>
