--- a/共編.html
+++ b/共編.html
@@ -28,14 +28,14 @@
               </div>
           </div>
 
-          <div class="main">
+          <div class="main-nav">
               <div class="logo"><i class="fa-solid fa-bag-shopping"></i> 蝦皮購物</div>
               <div class="search-bar">
                   <input type="text" placeholder="註冊獲得全站優惠券與免運券">
                   <button><i class=" fa-solid fa-magnifying-glass"></i></button>
               </div>
               <div class="cart-icon">
-                  <i class="fa-solid fa-cart-shopping"></i>
+                  <button><i class="fa-solid fa-cart-shopping"></i></button>
               </div>
           </div>
 
