--- a/共編.html
+++ b/共編.html
@@ -5,6 +5,8 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>蝦皮購物</title>
       <link rel="stylesheet" href="header.css">
+      <link rel="stylesheet" href="main.css">
+      <link rel="stylesheet" href="footer.css">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"><!--https://fontawesome.com/-->
   </head>
   <body>
@@ -54,7 +56,7 @@
           </div>
       </header>
       <br>
-      <main class="b">
+      <main>
         <div class="two">
         
         </div>
@@ -64,7 +66,7 @@
         </div>
     </main>
     <br>
-    <footer class="b">
+    <footer>
         <div class="four">
         
         </div>
