--- a/共編.html
+++ b/共編.html
@@ -14,7 +14,7 @@
           <div class="top">
               <div class="left">
                   <a href="#">賣家中心</a> | 
-                  <a href="#">開始隨拍即賣</a> | 
+                  <a href="#">開始隨拍即賣!</a> | 
                   <a href="#">下載</a> | 
                   <a href="#">追蹤我們</a>
                   <i class="fa-brands fa-facebook"></i>
@@ -22,9 +22,9 @@
                   <i class="fa-brands fa-line"></i>
               </div>
               <div class="right">
-                  <a href="#">通知總覽</a> | 
-                  <a href="#">幫助中心</a> | 
-                  <a href="#">繁體中文 ▼</a> | 
+                  <a href="#"><i class="fa-regular fa-bell"></i> 通知總覽</a> | 
+                  <a href="#"><i class="fa-solid fa-question"></i> 幫助中心</a> | 
+                  <a href="#"><i class="fa-solid fa-globe"></i> 繁體中文 ▼</a> | 
                   <a href="#">註冊</a> | 
                   <a href="#">登入</a>
               </div>
