--- a/共編.html
+++ b/共編.html
@@ -10,7 +10,7 @@
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"><!--https://fontawesome.com/-->
   </head>
   <body>
-      <header class="navbar">
+      <header>
           <div class="top">
               <div class="left">
                   <a href="#">賣家中心</a> | 
