--- a/共編.html
+++ b/共編.html
@@ -58,7 +58,19 @@
       <br>
     <main>
         <div class="two">
-        
+            <div class="image-container">
+                <button class="arrow-button arrow-left"><i class="fa-solid fa-arrow-left"></i></button>
+                <img src="ONE.png">
+                <button class="arrow-button arrow-right"><i class="fa-solid fa-arrow-right"></i></button>
+              </div>
+            <div class="a">
+                <div class="g">
+                    <img src="TWO.png" width="100%" height="100%">
+                </div>
+                <div class="g">
+                    <img src="THREE.png" width="100%" height="100%">
+                </div>
+            </div>
         </div>
     </main>
         <br>
