--- a/共編.html
+++ b/共編.html
@@ -76,11 +76,46 @@
         <br>
     <footer>
         <div class="three">
-        
+          <div class="categories">
+                <a href="#"><button class="button-icon">
+                    <i class="fa-solid fa-truck"><span>周六免運日</span></i>
+                </button></a>
+                <a href="#"><button class="button-icon">
+                    <i class="fa-solid fa-plane-arrival"><span> $99起免運</span></i>
+                </button></a>
+                <a href="#"><button class="button-icon">
+                    <i class="fa-solid fa-check"><span>免運當日到</span></i>
+                </button></a>
+                <a href="#"><button class="button-icon">
+                    <i class="fa-solid fa-ticket"><span>一鍵領券</span></i>
+                </button></a>
+                <a href="#"><button class="button-icon">
+                    <i class="fa-solid fa-bag-shopping"><span>蝦皮商城</span></i>
+                </button></a>
+                <a href="#"><button class="button-icon">
+                    <i class="fa-solid fa-globe"><span>蝦皮海外直送</span></i>
+                </button></a>
+                <a href="#"><button class="button-icon">
+                    <i class="fa-solid fa-credit-card"><span>銀行刷卡優惠</span></i>
+                </button></a>
+                <a href="#"><button class="button-icon">
+                    <i class="fa-solid fa-thumbs-up"><span>蝦皮超便宜</span></i>
+                </button></a>
+                <a href="#"><button class="button-icon">
+                    <i class="fa-solid fa-laptop"><span>蝦皮3C家電</span></i>
+                </button></a>
+                <a href="#"><button class="button-icon">
+                    <i class="fa-solid fa-tags"><span>活動集合</span></i>
+                </button></a>
+            </div>
         </div>
         <br>
         <div class="four">
-        
+          <div class="pattern">
+                <a href="#">
+                    <img src="down.png" width="100%" height="100%" >
+                </a>
+            </div>
         </div>
     </footer>
   </body>
