--- a/共編.html
+++ b/共編.html
@@ -76,42 +76,42 @@
         <br>
     <footer>
         <div class="three">
-          <div class="categories">
+            <div class="categories">
                 <a href="#"><button class="button-icon">
-                    <i class="fa-solid fa-truck"><span>周六免運日</span></i>
+                    <i class="fa-solid fa-truck icon-green"><div>周六免運日</div></i>
                 </button></a>
                 <a href="#"><button class="button-icon">
-                    <i class="fa-solid fa-plane-arrival"><span> $99起免運</span></i>
+                    <i class="fa-solid fa-plane-arrival icon-orange"><div> $99起免運</div></i>
                 </button></a>
                 <a href="#"><button class="button-icon">
-                    <i class="fa-solid fa-check"><span>免運當日到</span></i>
+                    <i class="fa-solid fa-check icon-orange"><div>免運當日到</div></i>
                 </button></a>
                 <a href="#"><button class="button-icon">
-                    <i class="fa-solid fa-ticket"><span>一鍵領券</span></i>
+                    <i class="fa-solid fa-ticket icon-orange"><div>一鍵領券</div></i>
                 </button></a>
                 <a href="#"><button class="button-icon">
-                    <i class="fa-solid fa-bag-shopping"><span>蝦皮商城</span></i>
+                    <i class="fa-solid fa-bag-shopping icon-red"><div>蝦皮商城</div></i>
                 </button></a>
                 <a href="#"><button class="button-icon">
-                    <i class="fa-solid fa-globe"><span>蝦皮海外直送</span></i>
+                    <i class="fa-solid fa-globe icon-green"><div>蝦皮海外直送</div></i>
                 </button></a>
                 <a href="#"><button class="button-icon">
-                    <i class="fa-solid fa-credit-card"><span>銀行刷卡優惠</span></i>
+                    <i class="fa-solid fa-credit-card icon-orange"><div>銀行刷卡優惠</div></i>
                 </button></a>
                 <a href="#"><button class="button-icon">
-                    <i class="fa-solid fa-thumbs-up"><span>蝦皮超便宜</span></i>
+                    <i class="fa-solid fa-thumbs-up icon-orange"><div>蝦皮超便宜</div></i>
                 </button></a>
                 <a href="#"><button class="button-icon">
-                    <i class="fa-solid fa-laptop"><span>蝦皮3C家電</span></i>
+                    <i class="fa-solid fa-laptop icon-blue"><div>蝦皮3C家電</div></i>
                 </button></a>
                 <a href="#"><button class="button-icon">
-                    <i class="fa-solid fa-tags"><span>活動集合</span></i>
+                    <i class="fa-solid fa-tags icon-green"><div>活動集合</div></i>
                 </button></a>
             </div>
         </div>
         <br>
         <div class="four">
-          <div class="pattern">
+            <div class="pattern">
                 <a href="#">
                     <img src="down.png" width="100%" height="100%" >
                 </a>
